# BitBurner-Go

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.txt
src/: GameState.cpp  GameState.h  Listener.cpp  Listener.h  MCTS.cpp  MCTS.h  Session.cpp  Session.h  boostUtils.cpp  boostUtils.h  console.cpp  go.js  main.cpp  mcts.js  microservice.cpp  reader.cpp  trainer.cpp  utils.cpp  utils.h
src/ai/: AdvancedMCTS.cpp  AdvancedMCTS.h  BasicMCTS.cpp  BasicMCTS.h  Example.cpp  Example.h  GameStateData.cpp  GameStateData.h  MCTS.cpp  MCTS.h  MCTSConstants.h  Net.h  NeuralNetwork.cpp  NeuralNetwork.h
src/game/: GameState.cpp  GameState.h  GameStateConstants.h
